--- a/Taxa de entrega/style.css
+++ b/Taxa de entrega/style.css
@@ -1,6 +1,12 @@
+
+
 body {
-    background-color: #0f0f0f;
+    background-image: linear-gradient(black, rgb(44, 1, 1),black);
+    height: 10px;
     color: rgb(185, 185, 185);
     display: flex;
-    gap: 30px;
+    gap: 200px;
+    zoom: 105%;
+    margin: 10px;
+    
 }
